Name:                yamemo
Version:             0.6.0.1
Synopsis:            Simple memoisation function
Description:         This module provides yet another simple memoisation with simple table operations (only lookup and insert).
Category:            Data
License:             BSD3
License-file:        LICENSE
Author:              Nobuo Yamashita
Maintainer:          nobsun@sampou.org
Build-type:          Simple
Cabal-version:       >= 1.10
Data-files:          examples/fib.hs, examples/lcs.hs examples/cc.hs

Library
  Hs-Source-Dirs:      src/
  Build-depends:       base >=4 && < 5
                     , mtl >= 2.2
                     , containers >= 0.5.6
  Exposed-modules:     Data.Function.YaMemo
                     , Data.Function.YaMemo.MemoTableClasses
                     , Data.Function.YaMemo.MemoTableInstances
                     , Data.Function.YaMemo.NumInstances
  Ghc-options:         -Wall -fno-warn-orphans
  Default-Language:    Haskell2010

Executable memo-cc
  Hs-Source-dirs:      examples/
  Main-Is:             cc.hs
  Build-depends:       base >= 4 && < 5
                     , containers
                     , mtl >= 2.2
                     , containers >= 0.5.6
                     , yamemo
  Default-Language:    Haskell2010

Executable memo-fib
  Hs-Source-dirs:      examples/
  Main-Is:             fib.hs
  Build-depends:       base >= 4 && < 5
                     , mtl >= 2.2
                     , containers >= 0.5.6
                     , yamemo
  Default-Language:    Haskell2010

Executable memo-lcs
  Hs-Source-dirs:      examples/
  Main-Is:             lcs.hs
  Build-depends:       base >= 4 && < 5
                     , mtl >= 2.2
                     , containers >= 0.5.6
                     , yamemo
  Default-Language:    Haskell2010

Source-Repository head
  type:           git
  location:       https://github.com/nobsun/oi